United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7075623 6990212 broke raiseException in 64 bit
7075623 : 6990212 broke raiseException in 64 bit

Details
Type:
Bug
Submit Date:
2011-08-05
Status:
Closed
Updated Date:
2012-10-01
Project Name:
JDK
Resolved Date:
2011-11-25
Component:
hotspot
OS:
solaris_10,windows_xp
Sub-Component:
compiler
CPU:
x86,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs22,hs22.1
Fixed Versions:
hs22

Related Reports
Backport:
Duplicate:
Relates:

Sub Tasks

Description
The fix for 6990212 included making the raiseException path do a normal dispatch instead of always using the compiler entry.  The assembly for 64 bit had a few minor breakages.  The code should be passed as an int instead of a ptr and on x86 the saved sp register is wrong.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-12
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/a19c671188cb
                                     
2011-08-23
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/a19c671188cb
                                     
2011-08-09
EVALUATION

7075623: 6990212 broke raiseException in 64 bit
Reviewed-by: kvn, twisti

The fix for 6990212 included making the raiseException path do a
normal dispatch instead of always using the compiler entry.  The
assembly for 64 bit had a few issues.  On x86 the saved sp register is
wrong which causes rarg0_code to be killed.  On sparc the code should
be passed as an int instead of a ptr which causes problems because of
endianness.  I also modified the x86 code to do the same.  Tested with
original regression test on sparc/x86 32/64 -Xcomp/-Xmixed.  I also
reran the failing JDK regression tests.
                                     
2011-08-09



Hardware and Software, Engineered to Work Together