7075623: 6990212 broke raiseException in 64 bit

Reviewed-by: kvn, twisti